VIVO E ENTERRADO lauch

--- a/es.html
+++ b/es.html
@@ -257,15 +257,32 @@
               <div>
                 <a
                   class="download-fasciculo"
-                  onClick="alert('Este número estará disponible a partir del 04/05/2020, si prefiere registrarse y recibirlo en su correo electrónico.')"
-                  href="#indisponivel"
-                  title="VIVO Y ENTERRADO - indisponivel"
+                  href="https://drive.google.com/file/d/16JKHHGxnDdllBHa8qTLhcQRzCMAT13u-"
+                  title="VIVO Y ENTERRADO"
                   target="_blank"
                 >
                   <h2>
                     <div class="date">04/MAI/2020</div>
                     <div class="sub-title">Fascículo - 7</div>
                     <div class="title">VIVO Y ENTERRADO</div>
+                    <div class="link-download">Clic aquí para descargar</div>
+                  </h2>
+                </a>
+              </div>
+            </li>
+            <li>
+              <div>
+                <a
+                  class="download-fasciculo"
+                  onClick="alert('Este número estará disponible a partir del 12/05/2020, si prefiere registrarse y recibirlo en su correo electrónico.')"
+                  href="#indisponivel"
+                  title="ESO ÉS GRAVE - indisponivel"
+                  target="_blank"
+                >
+                  <h2>
+                    <div class="date">12/MAI/2020</div>
+                    <div class="sub-title">Fascículo - 8</div>
+                    <div class="title">ESO ÉS GRAVE</div>
                     <div class="link-download">Clic aquí para descargar</div>
                   </h2>
                 </a>
