--- a/index.html
+++ b/index.html
@@ -188,15 +188,32 @@
               <div>
                 <a
                   class="download-fasciculo"
-                  onClick="alert('Esse Fascículo estará disponível a partir do dia 04/05/2020, se preferir cadastre-se e receba no seu email!')"
-                  href="#indisponivel"
-                  title="VIVO E ENTERRADO - indisponivel"
+                  href="https://drive.google.com/file/d/1PeVZgZDle5Lln2_Qy1yqwX9GT6RPiPz2"
+                  title="VIVO E ENTERRADO"
                   target="_blank"
                 >
                   <h2>
                     <div class="date">04/MAI/2020</div>
                     <div class="sub-title">Fascículo - 7</div>
                     <div class="title">VIVO E ENTERRADO</div>
+                    <div class="link-download">Clique aqui para baixar</div>
+                  </h2>
+                </a>
+              </div>
+            </li>
+            <li>
+              <div>
+                <a
+                  class="download-fasciculo"
+                  onClick="alert('Esse Fascículo estará disponível a partir do dia 12/05/2020, se preferir cadastre-se e receba no seu email!')"
+                  href="#indisponivel"
+                  title="ISSO É GRAVE - indisponivel"
+                  target="_blank"
+                >
+                  <h2>
+                    <div class="date">12/MAI/2020</div>
+                    <div class="sub-title">Fascículo - 8</div>
+                    <div class="title">ISSO É GRAVE</div>
                     <div class="link-download">Clique aqui para baixar</div>
                   </h2>
                 </a>
