--- a/index.html
+++ b/index.html
@@ -1,238 +1,318 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <!-- Google Tag Manager -->
-    <script>
-      (function(w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-TNBD6GN");
-    </script>
-    <!-- End Google Tag Manager -->
+	<head>
+		<!-- Google Tag Manager -->
+		<script>
+			(function (w, d, s, l, i) {
+				w[l] = w[l] || [];
+				w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+				var f = d.getElementsByTagName(s)[0],
+					j = d.createElement(s),
+					dl = l != "dataLayer" ? "&l=" + l : "";
+				j.async = true;
+				j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+				f.parentNode.insertBefore(j, f);
+			})(window, document, "script", "dataLayer", "GTM-TNBD6GN");
+		</script>
+		<!-- End Google Tag Manager -->
 
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Content-Language" content="pt-br" />
-    <!-- Primary Meta Tags -->
-    <title>Ilha das Formigas</title>
-    <meta name="title" content="Ilha das Formigas" />
-    <meta name="description" content="Ensaio artistico de Ariel Gricio" />
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="Content-Language" content="pt-br" />
+		<!-- Primary Meta Tags -->
+		<title>Ilha das Formigas</title>
+		<meta name="title" content="Ilha das Formigas" />
+		<meta name="description" content="Ensaio artistico de Ariel Gricio" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ilhadasformigas.xyz/" />
-    <meta property="og:title" content="Ilha das Formigas" />
-    <meta property="og:description" content="Ensaio artistico de Ariel Gricio" />
-    <!-- <meta property="og:image" content=""> -->
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://ilhadasformigas.xyz/" />
+		<meta property="og:title" content="Ilha das Formigas" />
+		<meta
+			property="og:description"
+			content="Ensaio artistico de Ariel Gricio"
+		/>
+		<!-- <meta property="og:image" content=""> -->
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://ilhadasformigas.xyz/" />
-    <meta property="twitter:title" content="Ilha das Formigas" />
-    <meta property="twitter:description" content="Ensaio artistico de Ariel Gricio" />
-    <!-- <meta property="twitter:image" content=""> -->
-    <link rel="stylesheet" href="./assets/normalize.min.css" />
-    <link rel="stylesheet" href="./css/main.min.css" />
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://ilhadasformigas.xyz/" />
+		<meta property="twitter:title" content="Ilha das Formigas" />
+		<meta
+			property="twitter:description"
+			content="Ensaio artistico de Ariel Gricio"
+		/>
+		<!-- <meta property="twitter:image" content=""> -->
+		<link rel="stylesheet" href="./assets/normalize.min.css" />
+		<link rel="stylesheet" href="./css/main.min.css" />
 
-    <!-- <FavIcons> -->
-    <link rel="apple-touch-icon" sizes="57x57" href="./favicon/img/apple-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="60x60" href="./favicon/img/apple-icon-60x60.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="./favicon/img/apple-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="./favicon/img/apple-icon-76x76.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="./favicon/img/apple-icon-114x114.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="./favicon/img/apple-icon-120x120.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="./favicon/img/apple-icon-144x144.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="./favicon/img/apple-icon-152x152.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/img/apple-icon-180x180.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="./favicon/img/android-icon-192x192.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/img/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="96x96" href="./favicon/img/favicon-96x96.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/img/favicon-16x16.png" />
-    <link rel="manifest" href="./favicon/img/manifest.json" />
-    <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="./favicon/img/ms-icon-144x144.png" />
-    <meta name="theme-color" content="#ffffff" />
-  </head>
-  <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript
-      ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-TNBD6GN"
-        height="0"
-        width="0"
-        style="display:none;visibility:hidden"
-      ></iframe
-    ></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    <div class="grid">
-      <div class="collumn-grid"><img class="bug" src="./img/up-bug-min.png" alt="ilha das formigas" /></div>
-      <div class="collumn-grid">
-        <div class="container">
-          <nav
-            style="top: 50px;
-          position: relative;"
-          >
-            <a href="es.html"><img src="./img/spain-flag.png" alt="version en espanhol"/></a>
-          </nav>
-          <h1>ilha<br />das<br />formigas</h1>
-          <ul>
-            <li>
-              <div>
-                <a
-                  class="download-fasciculo"
-                  href="https://drive.google.com/open?id=1NpYlDlHc4jzpMD6UT-R6npBgevsSFVkF"
-                  title="O MUDO FOFOQUEIRO"
-                  target="_blank"
-                >
-                  <h2>
-                    <div class="date">24/MAR/2020</div>
-                    <div class="sub-title">Fascículo - 1</div>
-                    <div class="title">O MUDO FOFOQUEIRO</div>
-                    <div class="link-download">Clique aqui para baixar</div>
-                  </h2>
-                </a>
-              </div>
-            </li>
-            <li>
-              <div>
-                <a
-                  class="download-fasciculo"
-                  href="https://drive.google.com/file/d/1FBdE_qW6Y8RqqF2AOZSyOcLifseZAsbO"
-                  title="ONOPOETOPÉIA"
-                  target="_blank"
-                >
-                  <h2>
-                    <div class="date">31/MAR/2020</div>
-                    <div class="sub-title">Fascículo - 2</div>
-                    <div class="title">ONOPOETOPÉIA</div>
-                    <div class="link-download">Clique aqui para baixar</div>
-                  </h2>
-                </a>
-              </div>
-            </li>
-            <li>
-              <div>
-                <a
-                  class="download-fasciculo"
-                  href="https://drive.google.com/file/d/1JGJ2KlWR9z5IpoaysPTRhGrLDQxmksYw"
-                  title="SATURNADO"
-                  target="_blank"
-                >
-                  <h2>
-                    <div class="date">07/ABR/2020</div>
-                    <div class="sub-title">Fascículo - 3</div>
-                    <div class="title">SATURNADO</div>
-                    <div class="link-download">Clique aqui para baixar</div>
-                  </h2>
-                </a>
-              </div>
-            </li>
-            <li>
-              <div>
-                <a
-                  class="download-fasciculo"
-                  href="https://drive.google.com/file/d/1UrvnasgH7h6dIwYIj15it0bLQ3UqziST"
-                  title="AMARGONAUTA"
-                  target="_blank"
-                >
-                  <h2>
-                    <div class="date">14/ABR/2020</div>
-                    <div class="sub-title">Fascículo - 4</div>
-                    <div class="title">AMARGONAUTA</div>
-                    <div class="link-download">Clique aqui para baixar</div>
-                  </h2>
-                </a>
-              </div>
-            </li>
-            <li>
-              <div>
-                <a
-                  class="download-fasciculo"
-                  href="https://drive.google.com/file/d/1xaVH0ufw2rbwP3XKTxJOsUmyzNGmJTvx"
-                  title="COMPENETRADAS"
-                  target="_blank"
-                >
-                  <h2>
-                    <div class="date">21/ABR/2020</div>
-                    <div class="sub-title">Fascículo - 5</div>
-                    <div class="title">COMPENETRADAS</div>
-                    <div class="link-download">Clique aqui para baixar</div>
-                  </h2>
-                </a>
-              </div>
-            </li>
-            <li>
-              <div>
-                <a
-                  class="download-fasciculo"
-                  href="https://drive.google.com/file/d/1rnpuRGmnY-JkchgnIgZjTXwoGqjG-oSS"
-                  title="ORÁCULO ORAÇÃO ORALOUCO"
-                  target="_blank"
-                >
-                  <h2>
-                    <div class="date">28/ABR/2020</div>
-                    <div class="sub-title">Fascículo - 6</div>
-                    <div class="title">ORÁCULO ORAÇÃO ORALOUCO</div>
-                    <div class="link-download">Clique aqui para baixar</div>
-                  </h2>
-                </a>
-              </div>
-            </li>
-            <li>
-              <div>
-                <a
-                  class="download-fasciculo"
-                  href="https://drive.google.com/file/d/1PeVZgZDle5Lln2_Qy1yqwX9GT6RPiPz2"
-                  title="VIVO E ENTERRADO"
-                  target="_blank"
-                >
-                  <h2>
-                    <div class="date">04/MAI/2020</div>
-                    <div class="sub-title">Fascículo - 7</div>
-                    <div class="title">VIVO E ENTERRADO</div>
-                    <div class="link-download">Clique aqui para baixar</div>
-                  </h2>
-                </a>
-              </div>
-            </li>
-            <li>
-              <div>
-                <a
-                  class="download-fasciculo"
-                  onClick="alert('Esse Fascículo estará disponível a partir do dia 12/05/2020, se preferir cadastre-se e receba no seu email!')"
-                  href="#indisponivel"
-                  title="ISSO É GRAVE - indisponivel"
-                  target="_blank"
-                >
-                  <h2>
-                    <div class="date">12/MAI/2020</div>
-                    <div class="sub-title">Fascículo - 8</div>
-                    <div class="title">ISSO É GRAVE</div>
-                    <div class="link-download">Clique aqui para baixar</div>
-                  </h2>
-                </a>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="collumn-grid"><img class="bug" src="./img/down-bug-min.png" alt="ilha das formigas" /></div>
-    </div>
-    <iframe
-      src="https://docs.google.com/forms/d/e/1FAIpQLSdbiDWZZt-ThpFzKcpJdgupWIHmLHBr517qlA6vYjODDJkr2g/viewform?embedded=true"
-      frameborder="0"
-      marginheight="0"
-      marginwidth="0"
-      >Carregando…</iframe
-    >
-    <footer>
-      <p>Todo o conteúdo desse ensaio é de autoria de Ariel Gricio. Pode espalhar, mas cite a fonte, por favor! ;)</p>
-    </footer>
-  </body>
+		<!-- <FavIcons> -->
+		<link
+			rel="apple-touch-icon"
+			sizes="57x57"
+			href="./favicon/img/apple-icon-57x57.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="60x60"
+			href="./favicon/img/apple-icon-60x60.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="72x72"
+			href="./favicon/img/apple-icon-72x72.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="76x76"
+			href="./favicon/img/apple-icon-76x76.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="114x114"
+			href="./favicon/img/apple-icon-114x114.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="120x120"
+			href="./favicon/img/apple-icon-120x120.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="144x144"
+			href="./favicon/img/apple-icon-144x144.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="152x152"
+			href="./favicon/img/apple-icon-152x152.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="./favicon/img/apple-icon-180x180.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="192x192"
+			href="./favicon/img/android-icon-192x192.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./favicon/img/favicon-32x32.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="96x96"
+			href="./favicon/img/favicon-96x96.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="./favicon/img/favicon-16x16.png"
+		/>
+		<link rel="manifest" href="./favicon/img/manifest.json" />
+		<meta name="msapplication-TileColor" content="#ffffff" />
+		<meta
+			name="msapplication-TileImage"
+			content="./favicon/img/ms-icon-144x144.png"
+		/>
+		<meta name="theme-color" content="#ffffff" />
+	</head>
+	<body>
+		<!-- Google Tag Manager (noscript) -->
+		<noscript
+			><iframe
+				src="https://www.googletagmanager.com/ns.html?id=GTM-TNBD6GN"
+				height="0"
+				width="0"
+				style="display: none; visibility: hidden"
+			></iframe
+		></noscript>
+		<!-- End Google Tag Manager (noscript) -->
+		<div class="grid">
+			<iframe
+				width="1024"
+				height="768"
+				src="https://www.youtube.com/embed/HHeIQQDRrT0?autoplay=1&mute=1&enablejsapi=1"
+				frameborder="0"
+				style="width: 100vw; height: 100vh"
+			></iframe>
+		</div>
+		<div class="grid">
+			<div class="collumn-grid">
+				<img class="bug" src="./img/up-bug-min.png" alt="ilha das formigas" />
+			</div>
+			<div class="collumn-grid">
+				<div class="container">
+					<nav style="top: 50px; position: relative">
+						<a href="es.html"
+							><img src="./img/spain-flag.png" alt="version en espanhol"
+						/></a>
+					</nav>
+					<h1>ilha<br />das<br />formigas</h1>
+					<ul>
+						<li>
+							<div>
+								<a
+									class="download-fasciculo"
+									href="https://drive.google.com/open?id=1NpYlDlHc4jzpMD6UT-R6npBgevsSFVkF"
+									title="O MUDO FOFOQUEIRO"
+									target="_blank"
+								>
+									<h2>
+										<div class="date">24/MAR/2020</div>
+										<div class="sub-title">Fascículo - 1</div>
+										<div class="title">O MUDO FOFOQUEIRO</div>
+										<div class="link-download">Clique aqui para baixar</div>
+									</h2>
+								</a>
+							</div>
+						</li>
+						<li>
+							<div>
+								<a
+									class="download-fasciculo"
+									href="https://drive.google.com/file/d/1FBdE_qW6Y8RqqF2AOZSyOcLifseZAsbO"
+									title="ONOPOETOPÉIA"
+									target="_blank"
+								>
+									<h2>
+										<div class="date">31/MAR/2020</div>
+										<div class="sub-title">Fascículo - 2</div>
+										<div class="title">ONOPOETOPÉIA</div>
+										<div class="link-download">Clique aqui para baixar</div>
+									</h2>
+								</a>
+							</div>
+						</li>
+						<li>
+							<div>
+								<a
+									class="download-fasciculo"
+									href="https://drive.google.com/file/d/1JGJ2KlWR9z5IpoaysPTRhGrLDQxmksYw"
+									title="SATURNADO"
+									target="_blank"
+								>
+									<h2>
+										<div class="date">07/ABR/2020</div>
+										<div class="sub-title">Fascículo - 3</div>
+										<div class="title">SATURNADO</div>
+										<div class="link-download">Clique aqui para baixar</div>
+									</h2>
+								</a>
+							</div>
+						</li>
+						<li>
+							<div>
+								<a
+									class="download-fasciculo"
+									href="https://drive.google.com/file/d/1UrvnasgH7h6dIwYIj15it0bLQ3UqziST"
+									title="AMARGONAUTA"
+									target="_blank"
+								>
+									<h2>
+										<div class="date">14/ABR/2020</div>
+										<div class="sub-title">Fascículo - 4</div>
+										<div class="title">AMARGONAUTA</div>
+										<div class="link-download">Clique aqui para baixar</div>
+									</h2>
+								</a>
+							</div>
+						</li>
+						<li>
+							<div>
+								<a
+									class="download-fasciculo"
+									href="https://drive.google.com/file/d/1xaVH0ufw2rbwP3XKTxJOsUmyzNGmJTvx"
+									title="COMPENETRADAS"
+									target="_blank"
+								>
+									<h2>
+										<div class="date">21/ABR/2020</div>
+										<div class="sub-title">Fascículo - 5</div>
+										<div class="title">COMPENETRADAS</div>
+										<div class="link-download">Clique aqui para baixar</div>
+									</h2>
+								</a>
+							</div>
+						</li>
+						<li>
+							<div>
+								<a
+									class="download-fasciculo"
+									href="https://drive.google.com/file/d/1rnpuRGmnY-JkchgnIgZjTXwoGqjG-oSS"
+									title="ORÁCULO ORAÇÃO ORALOUCO"
+									target="_blank"
+								>
+									<h2>
+										<div class="date">28/ABR/2020</div>
+										<div class="sub-title">Fascículo - 6</div>
+										<div class="title">ORÁCULO ORAÇÃO ORALOUCO</div>
+										<div class="link-download">Clique aqui para baixar</div>
+									</h2>
+								</a>
+							</div>
+						</li>
+						<li>
+							<div>
+								<a
+									class="download-fasciculo"
+									href="https://drive.google.com/file/d/1PeVZgZDle5Lln2_Qy1yqwX9GT6RPiPz2"
+									title="VIVO E ENTERRADO"
+									target="_blank"
+								>
+									<h2>
+										<div class="date">04/MAI/2020</div>
+										<div class="sub-title">Fascículo - 7</div>
+										<div class="title">VIVO E ENTERRADO</div>
+										<div class="link-download">Clique aqui para baixar</div>
+									</h2>
+								</a>
+							</div>
+						</li>
+						<li>
+							<div>
+								<a
+									class="download-fasciculo"
+									onClick="alert('Esse Fascículo estará disponível a partir do dia 12/05/2020, se preferir cadastre-se e receba no seu email!')"
+									href="#indisponivel"
+									title="ISSO É GRAVE - indisponivel"
+									target="_blank"
+								>
+									<h2>
+										<div class="date">12/MAI/2020</div>
+										<div class="sub-title">Fascículo - 8</div>
+										<div class="title">ISSO É GRAVE</div>
+										<div class="link-download">Clique aqui para baixar</div>
+									</h2>
+								</a>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="collumn-grid">
+				<img class="bug" src="./img/down-bug-min.png" alt="ilha das formigas" />
+			</div>
+		</div>
+		<iframe
+			src="https://docs.google.com/forms/d/e/1FAIpQLSdbiDWZZt-ThpFzKcpJdgupWIHmLHBr517qlA6vYjODDJkr2g/viewform?embedded=true"
+			frameborder="0"
+			marginheight="0"
+			marginwidth="0"
+			>Carregando…</iframe
+		>
+		<footer>
+			<p>
+				Todo o conteúdo desse ensaio é de autoria de Ariel Gricio. Pode
+				espalhar, mas cite a fonte, por favor! ;)
+			</p>
+		</footer>
+	</body>
 </html>
