Remove mute youtube

--- a/es.html
+++ b/es.html
@@ -139,7 +139,8 @@
 			<iframe
 				width="1024"
 				height="768"
-				src="https://www.youtube.com/embed/HHeIQQDRrT0?autoplay=1&mute=1&enablejsapi=1"
+				src="https://www.youtube.com/embed/HHeIQQDRrT0?autoplay=1&mute=0&enablejsapi=1"
+				allowfullscreen="allowfullscreen"
 				frameborder="0"
 				style="width: 100vw; height: 100vh"
 			></iframe>
