--- a/es.html
+++ b/es.html
@@ -139,7 +139,7 @@
 			<iframe
 				width="1024"
 				height="768"
-				src="https://www.youtube.com/embed/HHeIQQDRrT0?autoplay=1&mute=0&enablejsapi=1"
+				src="https://www.youtube.com/embed/HHeIQQDRrT0?autoplay=1&showinfo=0&controls=0&mute=0&enablejsapi=1"
 				allowfullscreen="allowfullscreen"
 				frameborder="0"
 				style="width: 100vw; height: 100vh"
