--- a/index.html
+++ b/index.html
@@ -137,10 +137,9 @@
 		<!-- End Google Tag Manager (noscript) -->
 		<div class="grid">
 			<iframe
-				width="1024"
-				height="768"
-				src="https://www.youtube.com/embed/HHeIQQDRrT0?showinfo=0&disablekb=0&fs=1&modestbranding=1&loop=1&controls=0&autoplay=1&mute=0&enablejsapi=1"
-				allowfullscreen="allowfullscreen"
+				src="https://www.youtube.com/embed/HHeIQQDRrT0?autoplay=1&loop=1&modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&iv_load_policy=3&fs=0&color=white&autohide=0&controls=0&disablekb=1"
+				width="560"
+				height="315"
 				frameborder="0"
 				style="width: 100vw; height: 100vh"
 			></iframe>
