--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 							<div>
 								<a
 									class="download-fasciculo"
-									href="https://drive.google.com/open?id=1NpYlDlHc4jzpMD6UT-R6npBgevsSFVkF"
+									href="https://drive.google.com/file/d/1NTz3Lfd7dQzP3lyV5AjZUGoutHlhu9V1/view?usp=sharing"
 									title="O MUDO FOFOQUEIRO"
 									target="_blank"
 								>
@@ -178,7 +178,7 @@
 							<div>
 								<a
 									class="download-fasciculo"
-									href="https://drive.google.com/file/d/1FBdE_qW6Y8RqqF2AOZSyOcLifseZAsbO"
+									href="https://drive.google.com/file/d/1NTz3Lfd7dQzP3lyV5AjZUGoutHlhu9V1/view?usp=sharing"
 									title="ONOPOETOPÉIA"
 									target="_blank"
 								>
@@ -195,7 +195,7 @@
 							<div>
 								<a
 									class="download-fasciculo"
-									href="https://drive.google.com/file/d/1JGJ2KlWR9z5IpoaysPTRhGrLDQxmksYw"
+									href="https://drive.google.com/file/d/1Q1RwYiE6HZmkcFzLpW_5Fx7GVQP-__gk/view?usp=sharing"
 									title="SATURNADO"
 									target="_blank"
 								>
@@ -212,7 +212,7 @@
 							<div>
 								<a
 									class="download-fasciculo"
-									href="https://drive.google.com/file/d/1UrvnasgH7h6dIwYIj15it0bLQ3UqziST"
+									href="https://drive.google.com/file/d/1EkKCQP4tycy2037iEBVD27jJ703PDKPu/view?usp=sharing"
 									title="AMARGONAUTA"
 									target="_blank"
 								>
@@ -229,7 +229,7 @@
 							<div>
 								<a
 									class="download-fasciculo"
-									href="https://drive.google.com/file/d/1xaVH0ufw2rbwP3XKTxJOsUmyzNGmJTvx"
+									href="https://drive.google.com/file/d/1yggzGzNiAWqVDMEofjzj3cE2zrboU8HP/view?usp=sharing"
 									title="COMPENETRADAS"
 									target="_blank"
 								>
@@ -246,7 +246,7 @@
 							<div>
 								<a
 									class="download-fasciculo"
-									href="https://drive.google.com/file/d/1rnpuRGmnY-JkchgnIgZjTXwoGqjG-oSS"
+									href="https://drive.google.com/file/d/12XvnpPJfcg5gVFzs_Gz_jpVOXvA2GiK5/view?usp=sharing"
 									title="ORÁCULO ORAÇÃO ORALOUCO"
 									target="_blank"
 								>
@@ -263,7 +263,7 @@
 							<div>
 								<a
 									class="download-fasciculo"
-									href="https://drive.google.com/file/d/1PeVZgZDle5Lln2_Qy1yqwX9GT6RPiPz2"
+									href="https://drive.google.com/file/d/1sBY5JR9UVWOI-EWmukBzhoBqKznuVU3u/view?usp=sharing"
 									title="VIVO E ENTERRADO"
 									target="_blank"
 								>
@@ -280,7 +280,7 @@
 							<div>
 								<a
 									class="download-fasciculo"
-									onClick="alert('Esse Fascículo estará disponível a partir do dia 12/05/2020, se preferir cadastre-se e receba no seu email!')"
+									onClick="alert('Esse Fascículo estará disponível em breve, se preferir cadastre-se e receba no seu email!')"
 									href="#indisponivel"
 									title="ISSO É GRAVE - indisponivel"
 									target="_blank"
