--- a/es.html
+++ b/es.html
@@ -161,7 +161,7 @@
 							<div>
 								<a
 									class="download-fasciculo"
-									href="https://drive.google.com/file/d/12eUo4PgxpIEVA0po4IL4awMRgLS7Hi97"
+									href="https://drive.google.com/file/d/1NTz3Lfd7dQzP3lyV5AjZUGoutHlhu9V1/view?usp=sharing"
 									title="O MUDO CHISMOSO"
 									target="_blank"
 								>
@@ -178,7 +178,7 @@
 							<div>
 								<a
 									class="download-fasciculo"
-									href="https://drive.google.com/file/d/1pCU6tJTpSpATsYYNKxJR8DXqv3n0UaQ-"
+									href="https://drive.google.com/file/d/1wUgXZTcoXWU7D6CPdYPMXPKaTbocu5q0/view?usp=sharing"
 									title="ONOPOETOPÉIA"
 									target="_blank"
 								>
@@ -195,7 +195,7 @@
 							<div>
 								<a
 									class="download-fasciculo"
-									href="https://drive.google.com/file/d/1t8xgYYA5VI07uYLEuOMlZhbB3aicfZSC"
+									href="https://drive.google.com/file/d/1G89CwkMcO_F0IxA64vGF3z0QbwcML7Hk/view?usp=sharing"
 									title="SATURNADO"
 									target="_blank"
 								>
@@ -212,7 +212,7 @@
 							<div>
 								<a
 									class="download-fasciculo"
-									href="https://drive.google.com/file/d/1cJUPkiNo0UHS83UmeLDNjxxd9lDeGPIa"
+									href="https://drive.google.com/file/d/1LXoPGCiumgmmUlLOqASI1xX1MR3q3Fuc/view?usp=sharing"
 									title="AMARGONAUTA"
 									target="_blank"
 								>
@@ -229,7 +229,7 @@
 							<div>
 								<a
 									class="download-fasciculo"
-									href="https://drive.google.com/file/d/1ApaS0Hjqy5SFecBr6pQEq7Ews4dk-sFD"
+									href="https://drive.google.com/file/d/1x-dR4uHFGTcGQ_onrJ5HHejQY5z83s-K/view?usp=sharing"
 									title="COMPENETRADAS"
 									target="_blank"
 								>
@@ -246,7 +246,7 @@
 							<div>
 								<a
 									class="download-fasciculo"
-									href="https://drive.google.com/file/d/1RFTj0UveJE4Ikj4D_sU33YhFgqH0HDj3"
+									href="https://drive.google.com/file/d/1ewKdCotLWJ-U1Y_UUYmABHLP9u_z8iFE/view?usp=sharing"
 									title="ORÁCULO ORACIÓN ORALOCO"
 									target="_blank"
 								>
@@ -263,7 +263,7 @@
 							<div>
 								<a
 									class="download-fasciculo"
-									href="https://drive.google.com/file/d/16JKHHGxnDdllBHa8qTLhcQRzCMAT13u-"
+									href="https://drive.google.com/file/d/1sBY5JR9UVWOI-EWmukBzhoBqKznuVU3u/view?usp=sharing"
 									title="VIVO Y ENTERRADO"
 									target="_blank"
 								>
@@ -280,7 +280,7 @@
 							<div>
 								<a
 									class="download-fasciculo"
-									onClick="alert('Este número estará disponible a partir del 12/05/2020, si prefiere registrarse y recibirlo en su correo electrónico.')"
+									onClick="alert('Este número estará disponible breve, si prefiere registrarse y recibirlo en su correo electrónico.')"
 									href="#indisponivel"
 									title="ESO ÉS GRAVE - indisponivel"
 									target="_blank"
